--- a/client/src/styles/Nav.css
+++ b/client/src/styles/Nav.css
@@ -6,6 +6,13 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.searchBar {
+  display: flex;
+  justify-content: center;
+}
+
+.routeLinks {}
+
 
 .nav-links{
   display: flex;
@@ -41,29 +48,36 @@
   border-radius: 12px;
   transition: all 0.4s ease;
 }
+
 .nav-links li a:hover:before{
   width: 100%;
 }
+
 .nav-links li.center a:before{
   left: 50%;
   transform: translateX(-50%);
 }
+
 .nav-links li.upward a:before{
   width: 100%;
   bottom: -5px;
   opacity: 0;
 }
+
 .nav-links li.upward a:hover:before{
   bottom: 0px;
   opacity: 1;
 }
+
 .nav-links li.forward a:before{
   width: 100%;
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 0.4s ease;
 }
+
 .nav-links li.forward a:hover:before{
   transform: scaleX(1);
   transform-origin: left;
 }
+
