--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -1,9 +1,23 @@
 .homeCard {
     display: flex;
+    justify-content: space-evenly;
 }
 
 .homepageCard{
-    padding: 20px 20px 20px 20px;
-    margin: 20px 20px 20px 20px;
+    padding: 20px 20px;
+    margin: 20px 20px;
     border: 1px solid black;
+    border-radius: 20px;
 }
+
+.name, .job {
+    display: flex;
+    justify-content: center;
+}
+
+.media-icons {
+    margin: 5px 0px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
