--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -1,8 +1,11 @@
-
+ .trainerTitle {
+  margin-left: 30px;
+  font-size: 35px;
+  margin-bottom: 20px;
+ }
 
   .wrapper {
     display: flex;
-    max-width: 650px;
     width: 100%;
     height: 400px;
     background: #fff;
@@ -11,10 +14,11 @@
     position: relative;
     border-radius: 12px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    min-height: 100vh;
     display: flex;
     background: #343f4f;
+    margin-bottom: 50px;
   }
+
   .wrapper i.button {
     position: absolute;
     top: 50%;
@@ -31,27 +35,33 @@
     z-index: 100;
     cursor: pointer;
   }
+
   i.button:active {
     transform: scale(0.94) translateY(-50%);
   }
+
   i#prev {
     left: 25px;
   }
+
   i#next {
     right: 25px;
   }
+
   .image-container {
     height: 320px;
     max-width: 500px;
     width: 100%;
     overflow: hidden;
   }
+
   .image-container .carousel {
     display: flex;
     height: 100%;
     width: 100%;
     transition: all 0.4s ease;
   }
+  
   .carousel img {
     height: 100%;
     width: 100%;
