--- a/client/src/styles/Nav.css
+++ b/client/src/styles/Nav.css
@@ -44,7 +44,7 @@
   left: 0;
   height: 3px;
   width: 0%;
-  background: #34efdf;
+  background: #122269;
   border-radius: 12px;
   transition: all 0.4s ease;
 }
