--- a/client/src/styles/Signup.css
+++ b/client/src/styles/Signup.css
@@ -1,7 +1,7 @@
 /* Google Fonts - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
-.container{
+.logincontainer{
     height: 100vh;
     width: 100%;
     display: flex;
@@ -10,6 +10,7 @@
     column-gap: 30px;
     border: #232836 5px solid;
 }
+
 .form{
     position: absolute;
     max-width: 430px;
@@ -17,28 +18,35 @@
     padding: 30px;
     border-radius: 6px;
     background: #FFF;
+    border: 2px solid gray;
 }
+
 .form.signup{
     opacity: 0;
     pointer-events: none;
 }
+
 .forms.show-signup .form.signup{
     opacity: 1;
     pointer-events: auto;
 }
+
 .forms.show-signup .form.login{
     opacity: 0;
     pointer-events: none;
 }
+
 header{
     font-size: 28px;
     font-weight: 600;
     color: #232836;
     text-align: center;
 }
+
 form{
     margin-top: 30px;
 }
+
 .form .field{
     position: relative;
     height: 50px;
@@ -46,6 +54,7 @@ form{
     margin-top: 20px;
     border-radius: 6px;
 }
+
 .field input,
 .field button{
     height: 100%;
@@ -55,14 +64,17 @@ form{
     font-weight: 400;
     border-radius: 6px;
 }
+
 .field input{
     outline: none;
     padding: 0 15px;
     border: 1px solid#CACACA;
 }
+
 .field input:focus{
     border-bottom-width: 2px;
 }
+
 .eye-icon{
     position: absolute;
     top: 50%;
@@ -73,32 +85,39 @@ form{
     cursor: pointer;
     padding: 5px;
 }
+
 .field button{
     color: #fff;
     background-color: #0171d3;
     transition: all 0.3s ease;
     cursor: pointer;
 }
+
 .field button:hover{
     background-color: #016dcb;
 }
+
 .form-link{
     text-align: center;
     margin-top: 10px;
 }
+
 .form-link span,
 .form-link a{
     font-size: 14px;
     font-weight: 400;
     color: #232836;
 }
+
 .form a{
     color: #0171d3;
     text-decoration: none;
 }
+
 .form-content a:hover{
     text-decoration: underline;
 }
+
 .line{
     position: relative;
     height: 1px;
@@ -106,6 +125,7 @@ form{
     margin: 36px 0;
     background-color: #d4d4d4;
 }
+
 .line::before{
     content: 'Or';
     position: absolute;
@@ -113,22 +133,25 @@ form{
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #FFF;
-    color: #8b8b8b;
+    color: #000000;
     padding: 0 15px;
 }
+
 .media-options a{
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 a.facebook{
     color: #fff;
     background-color: #4267b2;
 }
+
 a.facebook .facebook-icon{
     height: 28px;
     width: 28px;
-    color: #0171d3;
+    color: #4267b2;
     font-size: 20px;
     border-radius: 50%;
     display: flex;
@@ -136,6 +159,7 @@ a.facebook .facebook-icon{
     justify-content: center;
     background-color: #fff;
 }
+
 .facebook-icon,
 img.google-img{
     position: absolute;
@@ -143,14 +167,17 @@ img.google-img{
     left: 15px;
     transform: translateY(-50%);
 }
+
 img.google-img{
     height: 20px;
     width: 20px;
     object-fit: cover;
 }
+
 a.google{
     border: 1px solid #CACACA;
 }
+
 a.google span{
     font-weight: 500;
     opacity: 0.6;
