--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -3,19 +3,25 @@
 * {
   margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
 
-.container {
-  max-width: 1100px;
-  display: flex;
-  padding: 20px;
+.profileInfo {
+  display: inline-flex;
 }
 
-.container .box {
+.activityLog {
+  border: 1px solid black;
+  width: 25%;
+  height: 500px;
+  border-radius: 20px;
+  margin-left: 30px;
+}
+
+.box {
+  display: inline-flex;
   margin: 30px 30px;
-  width: 33%;
+  width: 25%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,7 +31,7 @@
   border: 1px solid black;
 }
 
-.container .box .image {
+ .box .image {
   margin: 10px 0;
   height: 150px;
   width: 150px;
@@ -95,14 +101,16 @@ hr {
 }
 
 @media (max-width: 1045px) {
-  .container .box {
+  .box {
     width: calc(50% - 10px);
     margin-bottom: 20px;
   }
 }
 
 @media (max-width: 710px) {
-  .container .box {
+  .box {
     width: 100%;
   }
 }
+
+
