--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 * {
   margin: 0px;
@@ -8,14 +8,6 @@
 
 .profileInfo {
   display: inline-flex;
-}
-
-.activityLog {
-  border: 1px solid black;
-  width: 25%;
-  height: 500px;
-  border-radius: 20px;
-  margin-left: 30px;
 }
 
 .box {
@@ -98,6 +90,31 @@ hr {
 .btns button:hover {
   background: #4267b2;
   color: #fff;
+}
+
+.activityLog {
+  border: 1px solid black;
+  width: 25%;
+  height: 500px;
+  border-radius: 20px;
+  margin-left: 30px;
+}
+
+.activityLog p {
+  margin: 30px 10px 10px 10px;
+  text-align: center;
+  font-size: 24px;
+}
+
+.monthText {
+  margin: 15px;
+  text-align: center;
+  font-size: 18px;
+}
+
+table {
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 1045px) {
