Change file structure/added reviews/searchfilter

--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -74,3 +74,9 @@
     height: 400px;
     width: 600px;
   }
+
+  .searchSection {
+    width: 25%;
+    margin: 10px 10px 10px 0px;
+    float: left;
+  }
