--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -6,8 +6,8 @@
   font-family: "Poppins", sans-serif;
 }
 
-.profileInfo {
-  display: inline-flex;
+.topSection {
+  display: flex;
 }
 
 .box {
@@ -92,29 +92,54 @@ hr {
   color: #fff;
 }
 
-.activityLog {
+.stockPhoto {
+  /* border: 1px solid black; */
+  border-radius: 20px;
+  margin: 30px 0px 0px 0px;
+  padding: 20px 20px 0px 20px;
+}
+
+.calendar {
   border: 1px solid black;
   width: 25%;
-  height: 500px;
+  height: 425px;
   border-radius: 20px;
   margin-left: 30px;
 }
 
-.activityLog p {
-  margin: 30px 10px 10px 10px;
-  text-align: center;
-  font-size: 24px;
-}
-
-.monthText {
-  margin: 15px;
-  text-align: center;
-  font-size: 18px;
-}
-
-table {
+.bottomSection {
   display: flex;
-  justify-content: center;
+}
+
+.classesSection {
+  margin: 0px 0px 30px 30px;
+  border: 1px solid black;
+  border-radius: 20px;
+  padding: 15px 15px 0px 15px;
+}
+
+.classesDetail, .reviewsDetail {
+  margin: 10px 0px 20px 0px;
+}
+
+.classesActivity {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.reviewsName {
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+aside {
+  width: 25%;
+  padding-left: 15px;
+  margin: 10px 10px 10px 10px;
+  float: right;
+  font-style: italic;
+
 }
 
 @media (max-width: 1045px) {
