Added switch for homepage + Trainer Card

--- a/client/src/styles/SearchIcon.css
+++ b/client/src/styles/SearchIcon.css
@@ -11,7 +11,7 @@
     justify-content: center;
 }
 
-.searchFilter {
+.homepageIcons {
     display: flex;
     justify-content: space-evenly;
     margin: 50px 150px 0px 150px;
