--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -76,7 +76,40 @@
   }
 
   .searchSection {
-    width: 25%;
-    margin: 10px 10px 10px 0px;
-    float: left;
+    display: flex;
   }
+
+  .searchFilter {
+    border-radius: 18px;
+    border: 1px solid black;
+    padding: 0px 20px 0px 10px;
+    width: 20%;
+    margin-left: 5%;
+  }
+
+  .searchLabels {
+    margin: 20px 0px 20px 0px;
+    padding: 10px 30px 0px 0px;
+  }
+
+  .trainerCard {
+    width: 50%;
+    margin-left: 5%;
+    border: 1px solid black;
+    height: 200px;
+    margin-right: 5%;
+  }
+
+.fasthidden {
+    opacity: 0;
+    animation: transition .5s ease-in-out .5s forwards;
+}
+
+@keyframes transition {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+}
