--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -1,115 +1,110 @@
- .trainerTitle {
+.trainerTitle {
   margin-left: 30px;
   font-size: 35px;
   margin-bottom: 20px;
- }
+}
 
-  .wrapper {
-    display: flex;
-    width: 100%;
-    height: 400px;
-    background: #fff;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    border-radius: 12px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    background: #343f4f;
-    margin-bottom: 50px;
-  }
+.wrapper {
+  display: flex;
+  width: 100%;
+  height: 400px;
+  background: #fff;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  border-radius: 12px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  background: #343f4f;
+  margin-bottom: 50px;
+}
 
-  .wrapper i.button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 36px;
-    width: 36px;
-    background-color: #343f4f;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 36px;
-    color: #fff;
-    font-size: 15px;
-    transition: all 0.3s linear;
-    z-index: 100;
-    cursor: pointer;
-  }
+.wrapper i.button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 36px;
+  width: 36px;
+  background-color: #343f4f;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 36px;
+  color: #fff;
+  font-size: 15px;
+  transition: all 0.3s linear;
+  z-index: 100;
+  cursor: pointer;
+}
 
-  i.button:active {
-    transform: scale(0.94) translateY(-50%);
-  }
+i.button:active {
+  transform: scale(0.94) translateY(-50%);
+}
 
-  i#prev {
-    left: 25px;
-  }
+i#prev {
+  left: 25px;
+}
 
-  i#next {
-    right: 25px;
-  }
+i#next {
+  right: 25px;
+}
 
-  .image-container {
-    height: 320px;
-    max-width: 500px;
-    width: 100%;
-    overflow: hidden;
-  }
+.image-container {
+  height: 320px;
+  max-width: 500px;
+  width: 100%;
+  overflow: hidden;
+}
 
-  .image-container .carousel {
-    display: flex;
-    height: 100%;
-    width: 100%;
-    transition: all 0.4s ease;
-  }
-  
-  .carousel img {
-    height: 100%;
-    width: 100%;
-    border-radius: 18px;
-    border: 10px solid #fff;
-    object-fit: cover;
-  }
+.image-container .carousel {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  transition: all 0.4s ease;
+}
 
-  img {
-    height: 400px;
-    width: 600px;
-  }
+.carousel img {
+  height: 100%;
+  width: 100%;
+  border-radius: 18px;
+  border: 10px solid #fff;
+  object-fit: cover;
+}
 
-  .searchSection {
-    display: flex;
-  }
+img {
+  height: 400px;
+  width: 600px;
+}
 
-  .searchFilter {
-    border-radius: 18px;
-    border: 1px solid black;
-    padding: 0px 20px 0px 10px;
-    width: 20%;
-    margin-left: 5%;
-  }
+.searchSection {
+  display: flex;
+}
 
-  .searchLabels {
-    margin: 20px 0px 20px 0px;
-    padding: 10px 30px 0px 0px;
-  }
+.searchFilter {
+  border-radius: 18px;
+  border: 1px solid black;
+  padding: 0px 20px 0px 10px;
+  width: 20%;
+  margin-left: 5%;
+}
 
-  .trainerCard {
-    width: 50%;
-    margin-left: 5%;
-    border: 1px solid black;
-    height: 200px;
-    margin-right: 5%;
-  }
+.labels {
+  margin-left: 5%;
+}
+
+.searchLabels {
+  margin: 20px 0px 10% 0px;
+}
 
 .fasthidden {
-    opacity: 0;
-    animation: transition .5s ease-in-out .5s forwards;
+  opacity: 0;
+  animation: transition 0.5s ease-in-out 0.5s forwards;
 }
 
 @keyframes transition {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
