--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -100,6 +100,11 @@ img {
   animation: transition 0.5s ease-in-out 0.5s forwards;
 }
 
+img {
+  height: 300px;
+  width: 100%;
+}
+
 @keyframes transition {
   0% {
     opacity: 0;
